--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="veebilehtmarit.css">
 	<link rel="stylesheet" type="text/css" href="veebilehttelefon.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
