lorem ipsumi lühendamine

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		
 		<div class="info"> 
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non elit sapien. Morbi scelerisque sapien ut pharetra faucibus. Sed vel rhoncus mi, nec sagittis sapien. Morbi est nisi, sodales sed velit quis, rutrum tincidunt nunc. Mauris libero ex, tincidunt semper sem a, vehicula facilisis lectus.</p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non elit sapien. Morbi scelerisque sapien ut pharetra faucibus. Sed vel rhoncus mi, nec sagittis sapien. Morbi est nisi, sodales sed velit quis, rutrum tincidunt nunc. Mauris libero ex, tincidunt semper sem a.</p>
 		</div>
 		</div>
 </div>
