--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</p>
 	</div>
 
-<div class="nav">
+<div class="nav" style="width: 100%">
 		<div class="dropdown">
   <button class="dropbtn">Menüü</button>
   <div class="dropdown-content">
